# LeagueOfLegendsWinPrediction

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  riot.txt  settings.py
.github/workflows/: lint.yml  python-app.yml
Data/: getData.py
Experiments/: Riot_Timeline.ipynb
Exploration/: FeatureSelection.ipynb  MatchChallengesExploration.ipynb  MatchInformation.ipynb  cleanData.ipynb  datasetViz.ipynb  explore_data.ipynb  gru_experiments.ipynb  merge_categories.ipynb  timeline.ipynb  timelineCleaning.ipynb  timelineViz.ipynb
Training/: combined.ipynb  gru.ipynb  gru_lightning.ipynb  gru_sweep.py  nn.ipynb  nn.py  nn2.ipynb  nn_lightling.py  nn_lightning.ipynb  sweep.ipynb
Training/results/: static.ipynb
Training/results/static/results_data/: fpr_table.csv  tpr_table.csv
Training/results/timeline/results_data/: fpr_table.csv  tpr_table.csv
Training/static/: sweep_nn_lightning.ipynb  sweep_nn_lightning.py
Training/timeline/: sweep_gru_lightning.py
scraping/: scrapy_summoner_championinfo.ipynb
src/: buildDataset.py  getData.py  get_data.py  utils.py  utils_test.py
src/crawlers/: MatchIdCrawler.py  scraping.py
src/dataHandling/: buildFrameDataset.py  cleanStaticDataset.py  cleanTimelineDataset.py  cleaningUtils.py
src/parsers/: champion.py  participant.py  summoner.py  timeline.py
src/scraping/: myspider.py  pipeline.py  proxylist.txt  spider.py  test_scraping.py
src/sqlstore/: champion.py  db.py  match.py  participant.py  queries.py  summoner.py  timeline.py  utils.py
src/zilean/: TimelineCrawler.py  __init__.py  core.py
thesis/: Preferences.tex  Thesis.bbl  Thesis.bcf  Thesis.bib  Thesis.blg  Thesis.lof  Thesis.lot  Thesis.run.xml  Thesis.tex  Thesis.toc  abbreviations.tex  test.bcf  test.blg  test.run.xml  test.tex
thesis/images/: feature_importance.pgf  gameDuration_distribution.pgf  participant1_armor.pgf  participant1_currentGold.pgf  participant1_health.pgf  participant1_maxHealth.pgf  participant1_movementSpeed.pgf  participant1_physicalDamage.pgf  participant1_totalDamageToChampions.pgf  participant1_totalGold.pgf  pearson_correlation.pgf  platformId_distribution.pgf  roc.pgf  staticcm.pgf  tier_distribution.pgf  totalGold.pgf  totalGold2.pgf
thesis/proposal/: proposal.blg  proposal.tex
thesis/svg-inkscape/: Map_of_MOBA2_svg-tex.pdf_tex  Map_of_MOBA_svg-tex.pdf_tex
