[tool.poetry]
name = "leaguify"
version = "1.0"
description = "Predicting the winning team in League of Legends"
authors = ["Moritz Palm <moritz.palm@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
riotwatcher = "3.2.5"
SQLAlchemy = "2.0.20"
pandas = "^2.1.1"
selenium = "3.141.0"
beautifulsoup4 = "4.12.0"
roman = "4.1"
Scrapy = "2.8.0"
configparser = "5.0.2"
itemadapter = "0.3.0"
pytest = "7.4.0"
typing = "3.7.4.3"
numpy = "^1.26.1"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
