[tool.poetry]
name = "leaguify"
version = "1.0"
description = "a League of Legends Win Prediction project"
authors = ["Moritz Palm <moritz.palm@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
riot-observer = "^1.3.3"
riotwatcher = "^3.2.5"
SQLAlchemy = "^2.0.22"
pandas = "<2.0.0"
selenium = "^4.14.0"
beautifulsoup4 = "^4.12.2"
roman = "^4.1"
Scrapy = "^2.11.2"
configparser = "^6.0.0"
itemadapter = "^0.8.0"
pytest = "^7.4.3"
numpy = ">=1.16.0,<1.26"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
jupyter = "^1.0.0"
wandb = "^0.15.12"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl" }
chardet = "^5.2.0"
matplotlib = ">=3.2,<=3.7.3"
seaborn = ">=0.10.1,<0.13"
torchmetrics = "^1.2.0"
ydata-profiling = "^4.6.1"
xgboost = "^2.0.2"
shap = "^0.43.0"
lightning = "^2.1.2"
tensorboard = "^2.15.1"
dill = "^0.3.7"
scipy = "^1.11.4"
statsmodels = "^0.14.0"



[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
