[tool.poetry]
name = "leaguify"
version = "1.0"
description = "a League of Legends Win Prediction project"
authors = ["Moritz Palm <moritz.palm@web.de>"]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
source = "https://github.com/MoritzPalm/LeagueOfLegendsWinPrediction"




[tool.poetry.dependencies]
python = ">=3.11,<3.12"
riot-observer = "^1.3.3"
riotwatcher = "^3.2.5"
SQLAlchemy = "^2.0.22"
pandas = "<2.0.0"
selenium = "^4.14.0"
beautifulsoup4 = "^4.12.2"
roman = "^4.1"
Scrapy = "^2.11.0"
configparser = "^6.0.0"
itemadapter = "^0.8.0"
pytest = "^7.4.3"
numpy = ">=1.16.0,<1.26"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
jupyter = "^1.0.0"
wandb = "^0.15.12"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl" }
chardet = "^5.2.0"
matplotlib = ">=3.2,<=3.7.3"
seaborn = ">=0.10.1,<0.13"
torchmetrics = "^1.2.0"
ydata-profiling = "^4.6.1"
xgboost = "^2.0.2"
shap = "^0.43.0"
lightning = "^2.1.2"
tensorboard = "^2.15.1"
dill = "^0.3.7"
scipy = "^1.11.4"
statsmodels = "^0.14.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

extend-include = ["*.ipynb"]

[tool.ruff.format]
#Use single quotes for non-triple-quoted strings.
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E", "W", "F", "B", "N", "I", "A",
    "ICN", "INP", "Q", "PD", "C", "R", "NPY", "RUF"]


[mypy]
files = ["src"]
strict = "true"

